Adding some logging to HttpFileCache